collapsomatic fix for orange plus right

--- a/style.css
+++ b/style.css
@@ -8204,7 +8204,7 @@ ul.events-homepage-orange .event-date .cal_date .cal_date_day {
 }
 /* override twitter bird with twitter x end */
 /* update font  awesome 5 to 6 */
-.orange-plus .collapseomatic:before {
+.orange-plus .collapseomatic:before, .orange-plus-right .collapseomatic:after {
     font-family: "Font Awesome 6 Pro" !important;
 }
 /* update font  awesome 5 to 6 end*/
